adding personal logos

--- a/mysite/templates/main.html
+++ b/mysite/templates/main.html
@@ -7,7 +7,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <title>Homero Ochoa</title>
-    <link rel="icon" href="{% static 'assets/donut.svg' %}">
+    <link rel="icon" href="{% static 'assets/H-color.svg' %}">
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Hind:wght@500;600;700;900&display=swap" rel="stylesheet">
@@ -31,7 +31,7 @@
             <div class="navi">
                 <div class="col-xl-9 d-flex align-items-center lefty">
                     <a class="navbar-brand me-auto" href="#">
-                        <img src="{% static 'assets/donut.svg' %}" width="50" height="50" alt="">
+                        <img src="{% static 'assets/H.svg' %}" width="50" height="50" alt="">
                     </a>
 
                     <nav class="nav-menu d-none d-lg-block float-right">
